fix up the places point animation problem blocked my higher z-index div

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -66,6 +66,9 @@ a
   width: 6050px
   font 40px 'QuicksandBook', Arial, sans-serif
 
+.place
+  cursor: pointer
+
 #first-place
   background-color: #FFF
   float: left
